project/force-app/main/default/objects/Rental_Plan__c/Rental_Plan__c.object-meta.xml
<CustomObject>
    <label>Rental Plan</label>
    <pluralLabel>Rental Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Rental Plan Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>