project/force-app/main/default/objects/Rental_Plan__c/fields/Customer_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Closing_Date__c</fullName>
    <label>Customer Closing Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>