project/force-app/main/default/objects/Rental_Plan__c/fields/Customer_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Deposit_Date__c</fullName>
    <label>Customer Deposit Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>