project/force-app/main/default/objects/Rental_Plan__c/fields/Negociation_Date__c.field-meta.xml
<CustomField>
    <fullName>Negociation_Date__c</fullName>
    <label>Negociation Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>