project/force-app/main/default/objects/Rental_Plan__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunity_Owners</relationshipName>
</CustomField>