project/force-app/main/default/objects/Rental_Plan__c/fields/Revenue_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Generation_Date__c</fullName>
    <label>Revenue Generation Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>