project/force-app/main/default/objects/Rental_Plan__c/fields/RO_Name__c.field-meta.xml
<CustomField>
    <fullName>RO_Name__c</fullName>
    <label>RO Name</label>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>RO_Handover__c</referenceTo>
    <relationshipName>RO_Names</relationshipName>
</CustomField>