project/force-app/main/default/objects/Rental_Plan__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <label>Sales Group</label>
    <type>Text</type>
    <length>255</length>
</CustomField>