project/force-app/main/default/objects/Rental_Plan__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <type>Text</type>
    <length>255</length>
</CustomField>