project/force-app/main/default/objects/Rental_Plan__c/validationRules/Check_Deposit_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Deposit_Date</fullName>
    <active>true</active>
    <description>Customer Deposit Date cannot be earlier than Customer Closing Date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Customer_Deposit_Date__c)),
    NOT(ISBLANK(Customer_Closing_Date__c)),
    Customer_Deposit_Date__c &lt; Customer_Closing_Date__c
)</errorConditionFormula>
    <errorDisplayField>Customer_Deposit_Date__c</errorDisplayField>
    <errorMessage>Customer Deposit Date cannot be earlier than Customer Closing Date</errorMessage>
</ValidationRule>